--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -24,6 +24,7 @@
                     <button id="printButton" class="btn btn-primary" onclick="printPage()">
                         Принтирай <i class="fas fa-print"></i>
                     </button>
+                    <h6 style="color:red;"> Цените се определят по курс на евро 1.95583</h6>
                 </div>
                 <div class="col-md-6 text-end">
 
