--- a/src/main/resources/templates/OrderProduct/addProductToExistingOrder.html
+++ b/src/main/resources/templates/OrderProduct/addProductToExistingOrder.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="packageId" style="width: 100%;">Продукти:</label>
-                                <select class="form-select" size="6" aria-label="size 6 select example" id="packageId" name="packageId" style="width: 100%;" required>
+                                <select id="packageId" name="packageId" style="width: 100%;">
                                     <option th:each="packageId : ${packages}" th:value="${packageId.id}" th:text="${packageId.id} + ' - ' +${packageId.name}"  ></option>
                                 </select>
                             </div>
@@ -71,4 +71,9 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+$(document).ready(function() {
+$('#packageId').select2();
+});
+</script>
 </body>
