fix navigation bar problems

--- a/src/main/resources/templates/Carton/edit.html
+++ b/src/main/resources/templates/Carton/edit.html
@@ -61,7 +61,16 @@
         background-color: #3e64e2;
     }
 </style>
-
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+</script>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
