--- a/src/main/resources/templates/Invoice/showAllInvoices.html
+++ b/src/main/resources/templates/Invoice/showAllInvoices.html
@@ -8,6 +8,16 @@
     <title> Всички Фактури </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+</script>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
@@ -62,6 +72,7 @@
         </main>
     </div>
 </div>
-<script src="js/app.js"></script>
+<script src="/js/app.js"></script>
+
 </body>
 </html>
