--- a/src/main/resources/templates/Plate/create.html
+++ b/src/main/resources/templates/Plate/create.html
@@ -8,7 +8,16 @@
   <title> Тарелки </title>
   <link href="/css/form.css" rel="stylesheet">
 </head>
-
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+</script>
 <body>
 <div class="wrapper">
   <!--    HEADER  -->
