--- a/src/main/resources/templates/Product/edit.html
+++ b/src/main/resources/templates/Product/edit.html
@@ -7,6 +7,16 @@
     <title>Редактирай продукт</title>
     <link href="/css/form.css" rel="stylesheet">
 </head>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+</script>
 <body>
 <div class="wrapper">
     <!-- HEADER -->
