--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -112,9 +112,8 @@ document.addEventListener("DOMContentLoaded", function() {
                                         </td>
 
                                         <td>
-<!--                                            //-2 ???????-->
                                             <input type="number" step="0.01" class="price-input"
-                                                   th:value="${productDTOS[__${orderProductDTO.packageId - 2}__].price}"
+                                                   th:value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
                                                    id="priceInput" name="priceInput">
                                         </td>
                                         <td th:text="20"></td>
@@ -174,7 +173,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <input type="hidden" name="orderProductIds" th:value="${orderProductDTO.id}">
                                     </th:block>
                                     <div>
-                                        <button id="printButton3" type="submit">Фактурирай</button>
+                                        <button id="printButton3" type="submit" onclick="return confirm('Сигурни ли сте, че искате да фактурирате тази поръчка?')">Фактурирай</button>
                                     </div>
                                 </form>
                             </div>
