--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -49,7 +49,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="order : ${orders}" th:unless="${order.arrivalDate}">
+                                    <tr th:each="order : ${orders}" th:unless="${order.receivedQuantity}">
                                         <td th:text="${order.id}"></td>
                                         <td th:text="${order.materialId}"></td>
                                         <td>
@@ -93,7 +93,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="order : ${orders}" th:if="${order.arrivalDate}">
+                                    <tr th:each="order : ${orders}" th:if="${order.receivedQuantity}">
                                         <td th:text="${order.id}"></td>
                                         <td th:text="${order.materialId}"></td>
                                         <td>
