--- a/src/main/resources/templates/OrderProduct/addProduct.html
+++ b/src/main/resources/templates/OrderProduct/addProduct.html
@@ -43,7 +43,10 @@ document.addEventListener("DOMContentLoaded", function() {
                             <div class="form-group">
                                 <label for="packageId" style="width: 100%;">Продукти:</label>
                                 <select class="form-select" size="6" aria-label="size 6 select example" id="packageId" name="packageId" style="width: 100%;" required>
-                                    <option th:each="packageId : ${packages}" th:value="${packageId.id}" th:text="${packageId.id} + ' - ' +${packageId.name}"  ></option>
+                                    <option th:each="packageId : ${packages}" th:value="${packageId.id}"
+                                            th:text="${packageId.id} + ' - ' +${packageId.name}"  th:data-image-url="@{${backendBaseUrl} + '/' + ${packageId.photo}}">
+                                    <img th:src="@{'${backendBaseUrl}' + '/' + ${package.photo}}"  width="50" height="50">
+                                    </option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -86,7 +89,20 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="/js/app.js"></script>
 <script>
 $(document).ready(function() {
-$('#packageId').select2();
+    $('#packageId').select2({
+        templateResult: formatState
+    });
 });
+
+function formatState(state) {
+    if (!state.id) {
+        return state.text;
+    }
+    var imageUrl = state.element.getAttribute('data-image-url');
+    var $state = $(
+        '<span><img src="' + imageUrl + '" width="50" height="50" /> ' + state.text + '</span>'
+    );
+    return $state;
+}
 </script>
 </body>
