--- a/src/main/resources/templates/Product/create.html
+++ b/src/main/resources/templates/Product/create.html
@@ -47,8 +47,12 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <div class="form-group" th:if="${packages}">
                                             <label for="packageId" style="width: 100%;">Кутия на Продукта:</label>
                                             <select id="packageId" name="packageId" style="width: 100%;">
-                                                <option th:each="package : ${packages}" th:value="${package.id}"
-                                                        th:text="${package.name}"></option>
+                                                    <option th:each="package : ${packages}" th:value="${package.id}"
+                                                            th:data-image-url="@{${backendBaseUrl} + '/' + ${package.photo}}" >
+                                                        <img th:src="@{'${backendBaseUrl}' + '/' + ${package.photo}}"  width="50" height="50">
+                                                        <span th:text = "${package.name}"></span>
+                                                    </option>
+                                                </select>
                                             </select>
                                         </div>
                                         <div class="form-group">
@@ -72,8 +76,21 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="/js/app.js"></script>
 <script>
 $(document).ready(function() {
-$('#packageId').select2();
+    $('#packageId').select2({
+        templateResult: formatState
+    });
 });
+
+function formatState(state) {
+    if (!state.id) {
+        return state.text;
+    }
+    var imageUrl = state.element.getAttribute('data-image-url');
+    var $state = $(
+        '<span><img src="' + imageUrl + '" width="50" height="50" /> ' + state.text + '</span>'
+    );
+    return $state;
+}
 </script>
 </body>
 </html>
