--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -49,10 +49,7 @@ margin: 0 auto; /* Опционално: Центриране на карта х
                         <div class="card-body">
                             <div class="row mb-3">
                                 <div class="col">
-                                    <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
-                                </div>
-                                <div class="col">
-                                    <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име...">
+                                    <input type="text" id="searchInput2" class="form-control" placeholder="Търсене по име">
                                 </div>
                             </div>
                             <div class="table-responsive">
@@ -102,5 +99,26 @@ margin: 0 auto; /* Опционално: Центриране на карта х
     </div>
 </div>
 <script src="js/app.js"></script>
+<script>
+    document.getElementById('searchInput2').addEventListener('input', function () {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById('searchInput2');
+        filter = input.value.toUpperCase();
+        table = document.querySelector('table');
+        tr = table.getElementsByTagName('tr');
+
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName('td')[1];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = '';
+                } else {
+                    tr[i].style.display = 'none';
+                }
+            }
+        }
+    });
+</script>
 </body>
 </html>
