--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -36,10 +36,7 @@
                             <div class="card-body">
                                 <div class="row mb-3">
                                     <div class="col">
-                                        <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
-                                    </div>
-                                    <div class="col">
-                                        <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име...">
+                                        <input type="text" id="searchInput2" class="form-control" placeholder="Търсене по име на кутия">
                                     </div>
                                 </div>
                                 <div class="table-responsive">
@@ -94,7 +91,27 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script>
+    document.getElementById('searchInput2').addEventListener('input', function () {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById('searchInput2');
+        filter = input.value.toUpperCase();
+        table = document.querySelector('table');
+        tr = table.getElementsByTagName('tr');
 
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName('td')[2];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = '';
+                } else {
+                    tr[i].style.display = 'none';
+                }
+            }
+        }
+    });
+</script>
 
 </body>
 
