--- a/src/main/resources/templates/Product/create.html
+++ b/src/main/resources/templates/Product/create.html
@@ -40,6 +40,11 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <div class="card-body">
                                     <form th:action="@{/product/submit}" method="post" th:object="${product}">
                                         <div class="form-group">
+                                            <label for="productCode">Код на продукта</label>
+                                            <input type="text" class="form-control" id="productCode" name="productCode" th:field="*{productCode}"
+                                                   th:value="${product.productCode}" minlength="2" maxlength="10">
+                                        </div>
+                                        <div class="form-group">
                                             <label for="price">Цена</label>
                                             <input type="number" class="form-control" id="price" name="price"
                                                    th:field="*{price}" required min="0" step="0.01" th:value="${product.price}">
