--- a/src/main/resources/templates/Product/produce.html
+++ b/src/main/resources/templates/Product/produce.html
@@ -44,7 +44,10 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <label for="productId" style="width: 100%;">Произведен продукт:</label>
                                             <select id="productId" name="productId" style="width: 100%;">
                                                 <option th:each="product : ${products}" th:value="${product.id}"
-                                                        th:text="${product.id} + ' ' +  ${productPackageMap.get(product.packageId)}"></option>
+                                                        th:text="${product.productCode} + ' - ' +  ${productPackageMap.get(product.packageId)}"
+                                                        th:data-image-url="@{${backendBaseUrl} + '/' + ${productPackageMapImages.get(product.packageId)}}">
+                                                    <img th:src="@{'${backendBaseUrl}' + '/' + ${productPackageMapImages.get(product.packageId)}}"  width="50" height="50">
+                                                </option>
                                             </select>
                                         </div>
                                         <div class="form-group">
@@ -68,10 +71,22 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="/js/app.js"></script>
 <script>
 $(document).ready(function() {
-$('#productId').select2();
+    $('#productId').select2({
+        templateResult: formatState
+    });
 });
-</script>
 
+function formatState(state) {
+    if (!state.id) {
+        return state.text;
+    }
+    var imageUrl = state.element.getAttribute('data-image-url');
+    var $state = $(
+        '<span><img src="' + imageUrl + '" width="50" height="50" /> ' + state.text + '</span>'
+    );
+    return $state;
+}
+</script>
 
 </body>
 </html>
