--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -34,10 +34,10 @@
                         <div class="card-body">
                             <div class="row mb-3">
                                 <div class="col">
-                                    <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
+                                    <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер код на продукт">
                                 </div>
                                 <div class="col">
-                                    <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име...">
+                                    <input type="text" id="searchInput2" class="form-control" placeholder="Търсене по име на продукт">
                                 </div>
                             </div>
                             <div class="table-responsive">
@@ -45,7 +45,7 @@
                                     <thead>
                                     <tr>
                                         <th>Снимка</th>
-                                        <th>ID</th>
+                                        <th>Код на продукта</th>
                                         <th>Име на Продукт</th>
                                         <th>Наличност</th>
                                         <th>Цена за брой</th>
@@ -56,7 +56,7 @@
                                         <td >
                                             <img th:src="@{${backendBaseUrl} + '/'+ ${productPackageMapImages.get(product.packageId)}}" alt="no image" height="100" width="100">
                                         </td>
-                                        <td th:text="${product.id}"></td>
+                                        <td th:text="${product.productCode}"></td>
                                         <td th:text="${productPackageMap.get(product.packageId)}"></td>
                                         <td>
                                             <span th:text="${product.availableQuantity + ' Броя'}"
@@ -91,6 +91,44 @@
 $(document).ready(function() {
 $('#packageId').select2();
 });
+document.getElementById('searchInput1').addEventListener('input', function () {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById('searchInput1');
+        filter = input.value.toUpperCase();
+        table = document.querySelector('table');
+        tr = table.getElementsByTagName('tr');
+
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName('td')[1]; //
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = '';
+                } else {
+                    tr[i].style.display = 'none';
+                }
+            }
+        }
+    });
+    document.getElementById('searchInput2').addEventListener('input', function () {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById('searchInput2');
+        filter = input.value.toUpperCase();
+        table = document.querySelector('table');
+        tr = table.getElementsByTagName('tr');
+
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName('td')[2];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = '';
+                } else {
+                    tr[i].style.display = 'none';
+                }
+            }
+        }
+    });
 </script>
 </body>
 </html>
