--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -23,7 +23,7 @@
                 <div class="col-lg-11 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Всички Потребители</h5>
+                            <h5 class="card-title mb-0">Всички продукти</h5>
                         </div>
                         <div class="text-center">
                             <a href="/product/create" class="btn btn-primary">Добави нов Продукт</a>
