--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -67,6 +67,11 @@ document.addEventListener("DOMContentLoaded", function() {
                 </a>
             </li>
             <li class="sidebar-item">
+                <a id="nav-show93" class="sidebar-link" href="/monthlyOrder/show">
+                    <i class="fas fa-shopping-basket align-middle"></i> <span class="align-middle">Месечни поръчки</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
                 <a id="nav-show4" class="sidebar-link" href="/material-order/show">
                     <i class="fas fa-shopping-basket align-middle"></i> <span class="align-middle">Поръчки на материали</span>
                 </a>
