--- a/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
+++ b/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
@@ -5,7 +5,7 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Добави продукти на поръчка </title>
+    <title> Добави продукти към месечна поръчка </title>
     <link href="/css/form.css" rel="stylesheet">
     <link href="/css/checkbox.css" rel="stylesheet">
 </head>
@@ -33,10 +33,10 @@ document.addEventListener("DOMContentLoaded", function() {
             <div class="form-container">
                 <div class="card custom-card-width-lg">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Добави продукти на поръчка</h5>
+                        <h5 class="card-title mb-0">Добави продукти към месечна поръчка</h5>
                     </div>
                     <div class="card-body">
-                        <form action="/orderProduct/submitExistingOrder" method="post">
+                        <form action="/monthlyOrder/submitExistingOrder" method="post">
                             <input type="hidden" th:name="orderId" th:value="${order.id}" />
                             <div class="form-group">
                                 <p>Номер на поръчка: <span th:text="${order.id}"></span></p>
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group">
                                 <label for="number" style="width: 100%;">Брой:</label>
-                                <input type="number" id="number"  th:field="${orderProduct.number}" name="number" required min="1">
+                                <input type="number" id="number"  th:field="${orderProduct.orderedQuantity}" name="number" required min="1">
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Запази</button>
@@ -72,7 +72,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             <tr th:each="product, iter : ${products}">
                                 <td th:text="${product.id}"></td>
                                 <td th:text="${product.name}"></td>
-                                <td th:text="${orderProducts[iter.index]?.number}"></td>
+                                <td th:text="${orderProducts[iter.index]?.orderedQuantity}"></td>
                             </tr>
                             </tbody>
                         </table>
