--- a/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
+++ b/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
@@ -85,7 +85,20 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="/js/app.js"></script>
 <script>
 $(document).ready(function() {
-$('#packageId').select2();
+    $('#packageId').select2({
+        templateResult: formatState
+    });
 });
+
+function formatState(state) {
+    if (!state.id) {
+        return state.text;
+    }
+    var imageUrl = state.element.getAttribute('data-image-url');
+    var $state = $(
+        '<span><img src="' + imageUrl + '" width="50" height="50" /> ' + state.text + '</span>'
+    );
+    return $state;
+}
 </script>
 </body>
