--- a/src/main/resources/templates/MonthlyOrder/orderDetails.html
+++ b/src/main/resources/templates/MonthlyOrder/orderDetails.html
@@ -50,6 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <table class="table">
                                     <thead>
                                     <tr>
+                                        <th>Снимка</th>
                                         <th>Продукт</th>
                                         <th>Поръчан брой</th>
                                         <th>Доставен брой</th>
@@ -58,6 +59,9 @@ document.addEventListener("DOMContentLoaded", function() {
                                     </thead>
                                     <tbody>
                                     <tr th:each="orderProduct, iter : ${orderProducts}">
+                                        <td>
+                                            <img th:src="@{${backendBaseUrl} + '/'+ ${products[iter.index]?.photo}}" alt="no image" height="100" width="100">
+                                        </td>
                                         <td th:text="${products[iter.index]?.name}"></td>
                                         <td th:text="${orderProduct.orderedQuantity}"></td>
                                         <td th:text="${orderProduct.sentQuantity}"></td>
