add the js for navbar in some htmls

--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -8,6 +8,16 @@
     <title> Кашони </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+</script>
 <style>
 .custom-card-width-lg {
 width: auto; /* Променете стойността на ширината, според вашите нужди */
